<resources>
    <string name="app_name">My App</string>
    <string name="user">User</string>
    <string name="put_your_email">Put your Email</string>
    <string name="put_your_password">Put your password</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="left">Left</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Password</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
</resources>